# banking-system

./: .clang-format  CMakeLists.txt  README.md  account.c  account.h  banking_system  database.c  database.h  main.c  menu.c  menu.h  transaction.c  transaction.h
src/: account.c  account.h  database.c  database.h  menu.c  menu.h  transaction.c  transaction.h
